--- a/example-apps/chatbot-rag-app/env.example
+++ b/example-apps/chatbot-rag-app/env.example
@@ -72,12 +72,13 @@ OTEL_SDK_DISABLED=true
 # Assign the service name that shows up in Kibana
 OTEL_SERVICE_NAME=chatbot-rag-app
 
-# Default to send logs, traces and metrics to an Elastic APM server accessible
-# via localhost.
+# Default to send logs, traces and metrics to an OpenTelemetry collector,
+# accessible via localhost. For example, Elastic Distribution of OpenTelemetry
+# (EDOT) Collector.
 #
-# When running inside Kubernetes, set to http://elasticsearch.default.svc:9200
+# When running inside Kubernetes, set to http://otel-collector.default.svc:4318
 # or similar.
-OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:8200
+OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318
 OTEL_EXPORTER_OTLP_PROTOCOL=http/protobuf
 
 # Change to 'false' to hide prompt and completion content
