--- a/example-apps/chatbot-rag-app/requirements.txt
+++ b/example-apps/chatbot-rag-app/requirements.txt
@@ -6,7 +6,7 @@
 #
 aiohappyeyeballs==2.6.1
     # via aiohttp
-aiohttp==3.11.16
+aiohttp==3.11.18
     # via langchain-community
 aiosignal==1.3.2
     # via aiohttp
@@ -20,11 +20,11 @@ attrs==25.3.0
     # via aiohttp
 blinker==1.9.0
     # via flask
-boto3==1.37.28
+boto3==1.38.0
     # via
     #   langchain-aws
     #   langtrace-python-sdk
-botocore==1.37.28
+botocore==1.38.0
     # via
     #   boto3
     #   s3transfer
@@ -41,7 +41,7 @@ charset-normalizer==3.4.1
     # via requests
 click==8.1.8
     # via flask
-cohere==5.14.2
+cohere==5.15.0
     # via langchain-cohere
 colorama==0.4.6
     # via
@@ -64,7 +64,7 @@ elastic-opentelemetry==1.0.0
     # via -r requirements.in
 elastic-transport==8.17.1
     # via elasticsearch
-elasticsearch[vectorstore-mmr]==8.17.2
+elasticsearch[vectorstore-mmr]==8.18.0
     # via
     #   -r requirements.in
     #   langchain-elasticsearch
@@ -80,7 +80,7 @@ flask==3.1.0
     #   flask-cors
 flask-cors==5.0.1
     # via -r requirements.in
-frozenlist==1.5.0
+frozenlist==1.6.0
     # via
     #   aiohttp
     #   aiosignal
@@ -95,7 +95,7 @@ google-api-core[grpc]==2.24.2
     #   google-cloud-core
     #   google-cloud-resource-manager
     #   google-cloud-storage
-google-auth==2.38.0
+google-auth==2.39.0
     # via
     #   google-api-core
     #   google-cloud-aiplatform
@@ -103,7 +103,7 @@ google-auth==2.38.0
     #   google-cloud-core
     #   google-cloud-resource-manager
     #   google-cloud-storage
-google-cloud-aiplatform==1.87.0
+google-cloud-aiplatform==1.90.0
     # via langchain-google-vertexai
 google-cloud-bigquery==3.31.0
     # via google-cloud-aiplatform
@@ -125,7 +125,7 @@ google-resumable-media==2.7.2
     # via
     #   google-cloud-bigquery
     #   google-cloud-storage
-googleapis-common-protos[grpc]==1.69.2
+googleapis-common-protos[grpc]==1.70.0
     # via
     #   google-api-core
     #   grpc-google-iam-v1
@@ -134,7 +134,7 @@ googleapis-common-protos[grpc]==1.69.2
     #   opentelemetry-exporter-otlp-proto-http
 grpc-google-iam-v1==0.14.2
     # via google-cloud-resource-manager
-grpcio==1.71.0
+grpcio==1.72.0rc1
     # via
     #   google-api-core
     #   googleapis-common-protos
@@ -147,7 +147,7 @@ h11==0.14.0
     # via httpcore
 halo==0.0.31
     # via -r requirements.in
-httpcore==1.0.7
+httpcore==1.0.8
     # via httpx
 httpx==0.28.1
     # via
@@ -162,7 +162,7 @@ httpx-sse==0.4.0
     #   langchain-community
     #   langchain-google-vertexai
     #   langchain-mistralai
-huggingface-hub==0.30.1
+huggingface-hub==0.30.2
     # via
     #   tokenizers
     #   transformers
@@ -188,17 +188,17 @@ jsonpatch==1.33
     # via langchain-core
 jsonpointer==3.0.0
     # via jsonpatch
-langchain==0.3.23
+langchain==0.3.24
     # via
     #   -r requirements.in
     #   langchain-community
-langchain-aws==0.2.18
+langchain-aws==0.2.21
     # via -r requirements.in
-langchain-cohere==0.4.3
+langchain-cohere==0.4.4
     # via -r requirements.in
-langchain-community==0.3.21
+langchain-community==0.3.22
     # via langchain-cohere
-langchain-core==0.3.51
+langchain-core==0.3.55
     # via
     #   langchain
     #   langchain-aws
@@ -211,20 +211,20 @@ langchain-core==0.3.51
     #   langchain-text-splitters
 langchain-elasticsearch==0.3.2
     # via -r requirements.in
-langchain-google-vertexai==2.0.19
+langchain-google-vertexai==2.0.20
     # via -r requirements.in
 langchain-mistralai==0.2.10
     # via -r requirements.in
-langchain-openai==0.3.12
+langchain-openai==0.3.14
     # via -r requirements.in
 langchain-text-splitters==0.3.8
     # via langchain
-langsmith==0.3.24
+langsmith==0.3.33
     # via
     #   langchain
     #   langchain-community
     #   langchain-core
-langtrace-python-sdk==3.8.11
+langtrace-python-sdk==3.8.15
     # via -r requirements.in
 log-symbols==0.0.14
     # via halo
@@ -234,20 +234,20 @@ markupsafe==3.0.2
     #   werkzeug
 marshmallow==3.26.1
     # via dataclasses-json
-multidict==6.3.2
+multidict==6.4.3
     # via
     #   aiohttp
     #   yarl
-mypy-extensions==1.0.0
+mypy-extensions==1.1.0
     # via typing-inspect
-numpy==2.2.4
+numpy==2.2.5
     # via
     #   elasticsearch
     #   langchain-aws
     #   langchain-community
     #   shapely
     #   transformers
-openai==1.70.0
+openai==1.75.0
     # via langchain-openai
 opentelemetry-api==1.31.1
     # via
@@ -352,7 +352,7 @@ pyasn1==0.6.1
     #   rsa
 pyasn1-modules==0.4.2
     # via google-auth
-pydantic==2.11.2
+pydantic==2.11.3
     # via
     #   cohere
     #   google-cloud-aiplatform
@@ -370,11 +370,12 @@ pydantic-core==2.33.1
     # via
     #   cohere
     #   pydantic
-pydantic-settings==2.8.1
+pydantic-settings==2.9.1
     # via langchain-community
 python-dateutil==2.9.0.post0
     # via
     #   botocore
+    #   elasticsearch
     #   google-cloud-bigquery
 python-dotenv==1.1.0
     # via pydantic-settings
@@ -406,13 +407,13 @@ requests==2.32.3
     #   transformers
 requests-toolbelt==1.0.0
     # via langsmith
-rsa==4.9
+rsa==4.9.1
     # via google-auth
-s3transfer==0.11.4
+s3transfer==0.12.0
     # via boto3
 safetensors==0.5.3
     # via transformers
-sentry-sdk==2.25.1
+sentry-sdk==2.26.1
     # via langtrace-python-sdk
 shapely==2.1.0
     # via google-cloud-aiplatform
@@ -456,16 +457,17 @@ tqdm==4.67.1
     #   transformers
 trace-attributes==7.2.1
     # via langtrace-python-sdk
-transformers==4.51.0
+transformers==4.51.3
     # via langtrace-python-sdk
 types-pyyaml==6.0.12.20250402
     # via langchain-cohere
 types-requests==2.32.0.20250328
     # via cohere
-typing-extensions==4.13.1
+typing-extensions==4.13.2
     # via
     #   anyio
     #   cohere
+    #   elasticsearch
     #   google-cloud-aiplatform
     #   huggingface-hub
     #   langchain-core
@@ -480,10 +482,12 @@ typing-extensions==4.13.1
 typing-inspect==0.9.0
     # via dataclasses-json
 typing-inspection==0.4.0
-    # via pydantic
+    # via
+    #   pydantic
+    #   pydantic-settings
 ujson==5.10.0
     # via langtrace-python-sdk
-urllib3==2.3.0
+urllib3==2.4.0
     # via
     #   botocore
     #   elastic-transport
@@ -501,7 +505,7 @@ wrapt==1.17.2
     #   deprecated
     #   opentelemetry-instrumentation
     #   opentelemetry-instrumentation-sqlalchemy
-yarl==1.19.0
+yarl==1.20.0
     # via aiohttp
 zipp==3.21.0
     # via importlib-metadata
